@@ -1,15 +1,16 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
 * [`fips`](#fips): This module manages the enabling and disabling of FIPS on a system It will set the kernel boot parametes and install/remove the dracut packag
 
 ## Classes
 
-### fips
+### `fips`
 
 This module manages the enabling and disabling of FIPS on a system
 It will set the kernel boot parametes and install/remove the dracut packages
@@ -19,9 +20,8 @@ Changing the FIPS status of a system changes the cryptographic modules used.
 This can affect existing keys and certificates and make them unusable.  Make
 sure these effects are understood before changing the status.
 
-NOTE: The absolute best way of ensuring that your desire to move into FIPS
-mode is set across ALL SIMP modules is to set `simp_options::fips` to `true`
-in Hiera.
+NOTE: The preferred method yo set FIPS mode consistently across ALL
+ALL SIMP modules is to set `simp_options::fips` to `true` in Hiera.
 
 #### Parameters
 
@@ -37,7 +37,7 @@ If FIPS should be enabled or disabled on the system.
   a system, this module mirrors the existing status of FIPS on the system
   to which it is applied.
 
-Default value: simplib::lookup('simp_options::fips', { 'default_value' => $facts['fips_enabled']})
+Default value: `simplib::lookup('simp_options::fips', { 'default_value' => $facts['fips_enabled']})`
 
 ##### `aesni`
 
@@ -46,7 +46,7 @@ Data type: `Boolean`
 This parameter indicates whether the system uses the
 Advanced Encryption Standard New Instructions set.
 
-Default value: (
+Default value: `(`
 
 ##### `dracut_ensure`
 
@@ -55,7 +55,7 @@ Data type: `String`
 The ensure status of the dracut-fips and
 dracut-fips-aesni packages
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
 ##### `fipscheck_ensure`
 
@@ -63,7 +63,7 @@ Data type: `String`
 
 The ensure status of the fipscheck package
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
 ##### `nss_ensure`
 
@@ -71,5 +71,5 @@ Data type: `String`
 
 The ensure status of the nss package
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
