@@ -12,6 +12,15 @@ HOSTS:
     platform: el-6-x86_64
     box: centos/6
     hypervisor: <%= hypervisor %>
+    ssh:
+      host_key:
+        - <%= Net::SSH::Transport::Algorithms::ALGORITHMS[:host_key].join("\n#{' '*8}- ") %>
+      kex:
+        - <%= Net::SSH::Transport::Algorithms::ALGORITHMS[:kex].join("\n#{' '*8}- ") %>
+      encryption:
+        - <%= Net::SSH::Transport::Algorithms::ALGORITHMS[:encryption].join("\n#{' '*8}- ") %>
+      hmac:
+        - <%= Net::SSH::Transport::Algorithms::ALGORITHMS[:hmac].join("\n#{' '*8}- ") %>
 
   el7:
     platform: el-7-x86_64
@@ -24,6 +33,9 @@ HOSTS:
     hypervisor: <%= hypervisor %>
 
 CONFIG:
+  ssh:
+    keepalive: true
+    keepalive_interval: 10
   log_level: verbose
   type: aio
 <% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
