@@ -14,6 +14,15 @@ HOSTS:
     platform: el-6-x86_64
     box: onyxpoint/oel-6-x86_64
     hypervisor: <%= hypervisor %>
+    ssh:
+      host_key:
+        - <%= Net::SSH::Transport::Algorithms::ALGORITHMS[:host_key].join("\n#{' '*8}- ") %>
+      kex:
+        - <%= Net::SSH::Transport::Algorithms::ALGORITHMS[:kex].join("\n#{' '*8}- ") %>
+      encryption:
+        - <%= Net::SSH::Transport::Algorithms::ALGORITHMS[:encryption].join("\n#{' '*8}- ") %>
+      hmac:
+        - <%= Net::SSH::Transport::Algorithms::ALGORITHMS[:hmac].join("\n#{' '*8}- ") %>
 
   oel7:
     roles:
@@ -30,6 +39,9 @@ HOSTS:
     hypervisor: <%= hypervisor %>
 
 CONFIG:
+  ssh:
+    keepalive: true
+    keepalive_interval: 10
   log_level: verbose
   type: aio
 <% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
